# solder-backend

./: .gitignore  app.py  app_config.json  certificate  consts.py  dicts.py  extends.py  filter.py  models.py  pyproject.toml  res_asc.txt  routes.py  test.py  test_client.py  test_server.py  点位-移动位对应表.txt
config/: Logger.py  barcode_parse_config.py  face_config.py  modbus_config.py  mysql_config.py  read_config.py
face/: collect.py  config.json  detect.py  draw_chs.py  facercg_config.py  train.py
login/: login.py  test.py
modbus/: PLC_WCS.py  WCS_PLC.py  client.py  modbus_addresses.py  scan.py
model/: Alarm.py  mysql_db_model.py  user.py
router/: alarm.py  auth.py  solder.py  solderflow.py  sport.py  station.py  stream.py  system.py  temperature.py  user.py  warn.py
tasks/: conditions.py  misc.py  read_mode.py  scheduler.py  socket_server.py  task_freeze.py  task_frezze.py  task_heartbeat.py  task_monitor.py  task_robot.py  task_scan.py  task_update.py  tasks_movement.py  udp_client.py  udp_server.py  video.py  video_record.py  webrtc_server.py
util/: AES_util.py  ICCard.py  MES_request.py  MesRequest.py  Response.py  activate_code.py  certificate  db_connection.py  global_args.py  logger.py  md5_util.py  parse.py  station_dict.py  thread_pool.py
